force-app/main/default/objects/FS_HistorialDescripcionCaso__c/FS_HistorialDescripcionCaso__c.object-meta.xml
<CustomObject>
    <label>Historial de Descripción</label>
    <nameField>
        <displayFormat>HD-{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historial de Descripción</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>