force-app/main/default/objects/FS_HistorialDescripcionCaso__c/fields/FS_Caso__c.field-meta.xml
<CustomField>
    <fullName>FS_Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Historial de Descripción</relationshipLabel>
    <relationshipName>Historial_de_Descripci_n</relationshipName>
    <type>Lookup</type>
</CustomField>