force-app/main/default/objects/FS_HistorialDescripcionCaso__c/fields/FS_ValorNuevo__c.field-meta.xml
<CustomField>
    <fullName>FS_ValorNuevo__c</fullName>
    <label>Valor Nuevo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>