force-app/main/default/objects/FS_HistorialDescripcionCaso__c/fields/FS_ValorOriginal__c.field-meta.xml
<CustomField>
    <fullName>FS_ValorOriginal__c</fullName>
    <label>Valor Original</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>